Native/Test/KL/error-boolean-or-lvalue.kl
function foo( io Integer n )
{
  n = 42;
}

operator entry()
{
  var Integer a, b;
  a = 1;
  foo( a || b );
  report b;
}
